Fixed overflow on iPhone. Reverted justified text.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -33,10 +33,6 @@ body {
       font-size: 32px;
       margin: 0;
       line-height: 1.25 !important;
-      
-      @media handheld, only screen and (max-width: 767px) {
-        font-size: 26px;
-      }
 
       a {
         color: black;
@@ -87,8 +83,6 @@ body {
     p {
       font-size: $font-size;
       line-height: 1.618;
-      text-align: justify;
-      text-justify: inter-ideograph;
 
       @media handheld, only screen and (max-width: 767px) {
         font-size: $font-size * 1.1;
@@ -110,11 +104,15 @@ body {
       background-color: darken($background, 5%);
       border: 1px solid darken($background, 10%);
       @include border-radius(3px);
+      box-sizing: border-box;
       font-family: Menlo, Monaco, $monospace;
+      @include inline-block;
       margin: 0 2px;
-      overflow: auto;
+      max-width: 100%;
+      overflow: hidden; 
       padding: 0 3px;
-      white-space: nowrap;
+      text-overflow: ellipsis; 
+      white-space:nowrap; 
 
       @media handheld, only screen and (max-width: 767px) {
         font-size: $font-size * 1.1;
@@ -127,8 +125,8 @@ body {
       @include border-radius(3px);
       font-family: Menlo, Monaco, $monospace;
       margin: 0 0 18px;
-      overflow: auto;
       padding: 10px;
+      overflow: auto;
 
       span {
         &.ss {
